k8s/rollout.yaml
apiVersion: argoproj.io/v1alpha1
kind: Rollout
metadata:
  name: azure-rag-app-shadow
  labels:
    app: azure-rag-app-shadow
spec:
  replicas: 2
  strategy:
    canary:
      trafficRouting:
        nginx:
          stableIngress: azure-rag-app-shadow-ingress
      stableService: azure-rag-app-shadow-stable
      canaryService: azure-rag-app-shadow-canary
      steps:
      - setMirrorRoute:
          name: shadow-mirror
          match:
          - header:
              name: x-enable-shadow
              exact: "true"
      - pause: {}
  selector:
    matchLabels:
      app: azure-rag-app-shadow
  template:
    metadata:
      labels:
        app: azure-rag-app-shadow
    spec:
      containers:
      - name: azure-rag-app-shadow
        image: kaustavcontainerregistry.azurecr.io/azure-rag-app-shadow:latest
        resources:
          requests:
            cpu: "500m"
            memory: "1Gi"
          limits:
            cpu: "4000m"
            memory: "4Gi"
